# Cornell-Claude-Builders-Club-Hackathon-SP2026

./: .gitignore  README.md  apitest.py  app.py  habit_tracker.py  journal.py  package-lock.json  pyproject.toml  requirements.txt
backend/: .env  .env.example  ai.py  database.py  gemenicall.py  main.py  models.py  requirements.txt  transcribe.py
backend/data/: futuremirror.sqlite3
front_end/: eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml
front_end/app/: globals.css  layout.tsx  page.tsx
front_end/components/: dashboard.tsx  decision-forks.tsx  future-self.tsx  navigation.tsx  timeline.tsx  voice-journal.tsx
front_end/lib/: journal-api.ts  journal-store.ts  journal-types.ts
front_end/tests/e2e/: journaling.spec.ts
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: DayEntryPanel.tsx  FutureSelfCard.tsx  FutureSelfQuestionnaire.tsx  GlassCard.tsx  LetterDisplay.tsx  MicButton.tsx  MoodBadge.tsx  MoodCalendar.tsx  Nav.tsx  PatternBanner.tsx  Waveform.tsx
frontend/src/constants/: moods.ts
frontend/src/hooks/: useAudioRecorder.ts  useJournalEntries.ts
frontend/src/pages/: Dashboard.tsx  FutureSelves.tsx  Timeline.tsx  VoiceJournal.tsx
frontend/src/types/: index.ts
src/new_software/: __init__.py  core.py  main.py
tests/: test_core.py  test_main.py
